--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-
+spring:
+    datasource:
+        dbcp2:
+            driver-class-name: com.mysql.cj.jdbc.Driver
+            url: jdbc:mysql://localhost:3306/springrestapidb?useTimezone=true&serverTimezone=UTC
+            username: root
+            password: Icaronon9@
+    jpa:
+        hibernate:
+            ddl-auto: update
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.MySQL8Dialect
+        show-sql: false
